hw03/deployments/kubernetes/crud/crud-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crudservice
  namespace: crud
  labels:
    app: crudservice
spec:
  type: NodePort
  ports:
    - nodePort: 30001
      port: 8000
      protocol: TCP
      targetPort: 8000
      name: crudservice
  selector:
    app: crudservice
