hw03/deployments/kubernetes/crud/crud-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudservice-ingress
  namespace: crud
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/astrviktor/(.*)
            backend:
              service:
                name: crudservice
                port:
                  number: 8000
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: crudservice
                port:
                  number: 8000
